// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for -5 seconds left 1`] = `
<div role="button" class="timer" style="height: 14px; width: 14px;"><svg width="16" height="16" viewBox="0 0 16 16" class="timer__pie">
    <circle r="7" cx="8" cy="8" fill="rgba(255, 255, 255, 0.24)" stroke="currentColor" stroke-width="2"></circle>
    <circle r="3.5" cx="12" cy="8" fill="transparent" stroke="currentColor" stroke-width="7" stroke-dasharray="calc(1px * 100 * 31.42 / 100) 31.42" stroke-dashoffset="calc(1px * 100 * 31.42 / 100) 31.42" transform="rotate(-90) translate(-20)"></circle>
  </svg>
  <x-icon-stub class="timer__cancel timer__cancel" tooltip="{'content':'Undo','delay':{'show':0,'hide':300}}"></x-icon-stub>
</div>
`;

exports[`matches snapshot for 0 seconds left 1`] = `
<div role="button" class="timer" style="height: 14px; width: 14px;"><svg width="16" height="16" viewBox="0 0 16 16" class="timer__pie">
    <circle r="7" cx="8" cy="8" fill="rgba(255, 255, 255, 0.24)" stroke="currentColor" stroke-width="2"></circle>
    <circle r="3.5" cx="12" cy="8" fill="transparent" stroke="currentColor" stroke-width="7" stroke-dasharray="calc(1px * 100 * 31.42 / 100) 31.42" stroke-dashoffset="calc(1px * 100 * 31.42 / 100) 31.42" transform="rotate(-90) translate(-20)"></circle>
  </svg>
  <x-icon-stub class="timer__cancel timer__cancel" tooltip="{'content':'Undo','delay':{'show':0,'hide':300}}"></x-icon-stub>
</div>
`;

exports[`matches snapshot for 2 seconds left 1`] = `
<div role="button" class="timer" style="height: 14px; width: 14px;"><svg width="16" height="16" viewBox="0 0 16 16" class="timer__pie">
    <circle r="7" cx="8" cy="8" fill="rgba(255, 255, 255, 0.24)" stroke="currentColor" stroke-width="2"></circle>
    <circle r="3.5" cx="12" cy="8" fill="transparent" stroke="currentColor" stroke-width="7" stroke-dasharray="calc(1px * 60 * 31.42 / 100) 31.42" stroke-dashoffset="calc(1px * 60 * 31.42 / 100) 31.42" transform="rotate(-90) translate(-20)"></circle>
  </svg>
  <x-icon-stub class="timer__cancel timer__cancel" tooltip="{'content':'Undo (2s left)','delay':{'show':0,'hide':300}}"></x-icon-stub>
</div>
`;

exports[`matches snapshot for 5 seconds left 1`] = `
<div role="button" class="timer" style="height: 14px; width: 14px;"><svg width="16" height="16" viewBox="0 0 16 16" class="timer__pie">
    <circle r="7" cx="8" cy="8" fill="rgba(255, 255, 255, 0.24)" stroke="currentColor" stroke-width="2"></circle>
    <circle r="3.5" cx="12" cy="8" fill="transparent" stroke="currentColor" stroke-width="7" stroke-dasharray="calc(1px * 0 * 31.42 / 100) 31.42" stroke-dashoffset="calc(1px * 0 * 31.42 / 100) 31.42" transform="rotate(-90) translate(-20)"></circle>
  </svg>
  <x-icon-stub class="timer__cancel timer__cancel" tooltip="{'content':'Undo (5s left)','delay':{'show':0,'hide':300}}"></x-icon-stub>
</div>
`;

exports[`matches snapshot for 10 seconds left 1`] = `
<div role="button" class="timer" style="height: 14px; width: 14px;"><svg width="16" height="16" viewBox="0 0 16 16" class="timer__pie">
    <circle r="7" cx="8" cy="8" fill="rgba(255, 255, 255, 0.24)" stroke="currentColor" stroke-width="2"></circle>
    <circle r="3.5" cx="12" cy="8" fill="transparent" stroke="currentColor" stroke-width="7" stroke-dasharray="calc(1px * 0 * 31.42 / 100) 31.42" stroke-dashoffset="calc(1px * 0 * 31.42 / 100) 31.42" transform="rotate(-90) translate(-20)"></circle>
  </svg>
  <x-icon-stub class="timer__cancel timer__cancel" tooltip="{'content':'Undo (10s left)','delay':{'show':0,'hide':300}}"></x-icon-stub>
</div>
`;

exports[`should match snapshot when dark is true 1`] = `
<div role="button" class="timer" style="height: 14px; width: 14px;"><svg width="16" height="16" viewBox="0 0 16 16" class="timer__pie">
    <circle r="7" cx="8" cy="8" fill="rgba(255, 255, 255, 0.24)" stroke="currentColor" stroke-width="2"></circle>
    <circle r="3.5" cx="12" cy="8" fill="transparent" stroke="currentColor" stroke-width="7" stroke-dasharray="calc(1px * 0 * 31.42 / 100) 31.42" stroke-dashoffset="calc(1px * 0 * 31.42 / 100) 31.42" transform="rotate(-90) translate(-20)"></circle>
  </svg>
  <x-icon-stub class="timer__cancel" tooltip="{'content':'Undo (10s left)','delay':{'show':0,'hide':300}}"></x-icon-stub>
</div>
`;

exports[`should match snapshot when show cancel is false 1`] = `
<div role="button" class="timer" style="height: 14px; width: 14px;" showtimer="true"><svg width="16" height="16" viewBox="0 0 16 16" class="timer__pie">
    <circle r="7" cx="8" cy="8" fill="rgba(255, 255, 255, 0.24)" stroke="currentColor" stroke-width="2"></circle>
    <circle r="3.5" cx="12" cy="8" fill="transparent" stroke="currentColor" stroke-width="7" stroke-dasharray="calc(1px * 0 * 31.42 / 100) 31.42" stroke-dashoffset="calc(1px * 0 * 31.42 / 100) 31.42" transform="rotate(-90) translate(-20)"></circle>
  </svg>
  <x-icon-stub class="timer__cancel timer__cancel" tooltip="{'content':'Undo (10s left)','delay':{'show':0,'hide':300}}"></x-icon-stub>
</div>
`;
